--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "eslint": "^8",
